<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente_info_apellido_pat_label"
        style="?android:listSeparatorTextViewStyle"/>
    <!--android:background="@color/material_deep_teal_500"-->
    <EditText
        android:id="@+id/et_apellido_pat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_marginTop="10dp"
        android:hint="@string/cliente_info_apellido_pat_label"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente_info_apellido_mat_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/et_apellido_mat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"

        android:layout_marginTop="10dp"
        android:hint="@string/cliente_info_apellido_mat_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente_info_nombre_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:inputType="textCapWords"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:hint="@string/cliente_info_nombre_label"/>
    <!--android:inputType="phone"-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente_info_ci_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/et_ci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="10dp"

        android:hint="@string/cliente_info_ci_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente_info_telefono_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"

        android:hint="@string/cliente_info_telefono_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente_info_email_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"

        android:hint="@string/cliente_info_email_label"/>

        </LinearLayout>

</ScrollView>