<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:fillViewport="true"
            android:scrollbars="none"
            tools:context=".AutomovilInfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@null"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/iv_foto"
            android:layout_marginTop="10dp"
            >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_marca_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
                android:id="@+id/et_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>
                <!--android:inputType="textCapWords"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automovil_info_modelo_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/et_modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automovil_info_placa_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/et_placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automovil_info_chasis_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/et_chasis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automovil_info_tipo_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/et_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automovil_info_km_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/et_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automovil_info_color_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/et_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automovil_info_motor_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/et_motor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"/>





    </LinearLayout>



    </RelativeLayout>

</ScrollView>