<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scrollbarStyle="outsideInset"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_marca_label"
            style="?android:listSeparatorTextViewStyle"/>
        <!--android:background="@color/material_deep_teal_500"-->
        <EditText
            android:id="@+id/et_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginTop="10dp"
            android:hint="@string/automovil_info_marca_label"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_modelo_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/et_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginTop="10dp"
            android:hint="@string/automovil_info_modelo_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_tipo_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/et_tipo"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/automovil_info_tipo_label"/>
            <!--android:inputType="phone"-->


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/automovil_info_placa_label"
        style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/et_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_marginTop="10dp"
            android:hint="@string/automovil_info_placa_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_chasis_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/et_chasis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_marginTop="10dp"
            android:hint="@string/automovil_info_chasis_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_km_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/et_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:hint="@string/automovil_info_km_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_color_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/et_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginTop="10dp"
            android:hint="@string/automovil_info_color_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automovil_info_motor_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/et_motor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_marginTop="10dp"
            android:hint="@string/automovil_info_motor_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                />

            <ImageButton
                android:id="@+id/ib_camara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_camera"
                android:contentDescription="@null"
                android:background="?attr/selectableItemBackground"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/iv_foto"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>